1.7.14.dev0
 * #484: Add a new verbosity level (-2) to disable output entirely (for console, syslog, log file,
   or monitoring), so not even errors are shown.
 * #688: Tweak archive check probing logic to use the newest timestamp found when multiple exist.
 * #659: Add Borg 2 date-based matching flags to various actions for archive selection.
 * #706: Fix "--archive latest" on "list" and "info" actions only working on the first of multiple
   configured repositories.

1.7.13
 * #375: Restore particular PostgreSQL schemas from a database dump via "borgmatic restore --schema"
   flag. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#restore-particular-schemas
 * #678: Fix error from PostgreSQL when dumping a database with a "format" of "plain".
 * #678: Fix PostgreSQL hook to support "psql_command" and "pg_restore_command" options containing
   commands with arguments.
 * #678: Fix calls to psql in PostgreSQL hook to ignore "~/.psqlrc", whose settings can break
   database dumping.
 * #680: Add support for logging each log line as a JSON object via global "--log-json" flag.
 * #682: Fix "source_directories_must_exist" option to expand globs and tildes in source directories.
 * #684: Rename "master" development branch to "main" to use more inclusive language. You'll need to
   update your development checkouts accordingly.
 * #686: Add fish shell completion script so you can tab-complete on the borgmatic command-line. See
   the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#shell-completion
 * #687: Fix borgmatic error when not finding the configuration schema for certain "pip install
   --editable" development installs.
 * #688: Fix archive checks being skipped even when particular archives haven't been checked
   recently. This occurred when using multiple borgmatic configuration files with different
   "archive_name_format"s, for instance.