@@ -3,6 +3,8 @@
    or monitoring), so not even errors are shown.
  * #688: Tweak archive check probing logic to use the newest timestamp found when multiple exist.
  * #659: Add Borg 2 date-based matching flags to various actions for archive selection.
+ * #704: Fix "check" action error when repository and archive checks are configured but the archive
+   check gets skipped due to the configured frequency.
  * #706: Fix "--archive latest" on "list" and "info" actions only working on the first of multiple
    configured repositories.
 
